--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                         Confío
                         plenamente en mi capacidad de producir ideas interesantes y desarrollarme en equipo tanto como
                         individualmente.</p>
-                    <a href="src/multimedia/Currículum.pdf" target="_blank">
+                    <a href="src/multimedia/Curriculum.pdf" target="_blank">
                         <button class="download-cv" download="/Currículum.pdf">Download CV</button>
                     </a>
                 </div>
